--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,11 @@ cms
 cms.wpr
 cms.wpu
 #.config
-#.dbus
-#.dbvis
+.dbus
+.dbvis
 DbVisualizer
 #.dircolors
-#.distlib
+.distlib
 downloads
 .erlang.cookie
 #.gconf
@@ -31,7 +31,7 @@ installed
 .local
 local-dev-setup
 localdevsetup2
-#.matplotlib
+.matplotlib
 messagetest.wpr
 messagetest.wpu
 .mozilla
@@ -64,13 +64,14 @@ venvs
 #.vimrc
 .vimswap
 .vimundo
-#.vimviews
+.vimviews
 .virtualenvs
 vmshare
 #.wing*
 .wingide4
-#.wingide5
+.wingide5
 workingon
 *.wp?
-#.Xauthority
-#.Xresources
+.Xauthority
+.Xresources
+*.swp
